i add the git hub link

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             <li>✅ Frontend: HTML, CSS, JavaScript, Bootstrap</li>
             <li>✅ Backend: Node.js, Express (if applicable)</li>
             <li>✅ Tools: Git, VS Code, Figma</li>
+
+            <a href="https://github.com/chaitanya200e/my-portfolio" class="btn btn-secondary" target="_blank">
+                View on GitHub
+            </a>
         </ul>
         <p>I'm always open to new opportunities and collaborations. Feel free to <a href="#contact">reach out!</a></p>
     </section>
